5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4147/executions/1593_2426.log
== TEST (2019-03-27 09:13:18) 
-- CODE:
t = float(input("Tempo gasto: "))
v = float(input("Velocidade media: "))
d = t * v 
q = v * t / q
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    q = v * t / q
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 09:13:50) 
-- CODE:
t = float(input("Tempo gasto: "))
v = float(input("Velocidade media: "))
d = t * v 
q = (v * t) / q
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    q = (v * t) / q
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 09:14:29) 
-- CODE:
t = float(input("Tempo gasto: "))
v = float(input("Velocidade media: "))
d = t * v 
q = (v * t) / q
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    q = (v * t) / q
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 09:15:06) 
-- CODE:
t = float(input("Tempo gasto: "))
v = float(input("Velocidade media: "))
d = t * v 
q = (v * t) / d
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    q = (v * t) / q
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 09:17:53) 
-- CODE:
t = float(input("Tempo gasto: "))
v = float(input("Velocidade media: "))
d = t * v 
q = (v * t) / d
print(d)
print(q)
-- OUTPUT:
900.0
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 09:18:11) 
-- CODE:
t = float(input("Tempo gasto: "))
v = float(input("Velocidade media: "))
d = t * v 
q = (v * t) / 12
print(d)
print(q)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 09:18:17) 
-- CODE:
t = float(input("Tempo gasto: "))
v = float(input("Velocidade media: "))
d = t * v 
q = (v * t) / 12
print(d)
print(q)
-- EXECUTION TIME:
0.140525
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
